<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/edtPortada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edtEscribir"
        android:text="@string/guardar_archivos_en_telf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="guardarTexto"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPortada"
        app:layout_constraintVertical_bias="0.165" />

    <Button
        android:id="@+id/btnRecuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="recuperarTexto"
        android:text="@string/recuperar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toEndOf="@+id/btnGuardar"
        app:layout_constraintTop_toBottomOf="@+id/edtPortada"
        app:layout_constraintVertical_bias="0.165" />

    <EditText
        android:id="@+id/edtEscribir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/escribe_un_texto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPortada"
        app:layout_constraintVertical_bias="0.072"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnGuardarExt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="guardarTextoExt"
        android:text="@string/guardarext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGuardar"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/btnRecuperarExt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="recuperarTextoExt"
        android:text="@string/recuperarext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGuardarExt"
        app:layout_constraintTop_toBottomOf="@+id/btnRecuperar"
        app:layout_constraintVertical_bias="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>